[metadata]
name = manifest-bundle-splitter
version = attr: ysplit.__version__
url = https://github.com/gladiatr72/tools/kube-manifest-bundle-splitter
description = split kubernetes yaml manifest bundles into individual files

[options]
python_requires = >=3.6
packages = find:
install_requires =
        pyYAML <5.4.0
	click <8.0.0
zip_safe = false
include_package_data = true

[options.entry_points]
console_scripts =
	kmbs = ysplit:run
	manifest-bundle-splitter = ysplit:run

